fix: viewport layout with visible interpretations panel (#323) (#325)
* set flex-basis on main-center to allocate remaining space for main-right

* change main-right bg color to make SV interpretations look better

--- a/packages/app/src/components/App.css
+++ b/packages/app/src/components/App.css
@@ -27,6 +27,10 @@ body {
     flex-grow: 1;
 }
 
+.flex-basis-0 {
+    flex-basis: 0%;
+}
+
 /* Headerbar */
 
 .section-headerbar {
@@ -59,7 +63,7 @@ body {
 .main-right {
     flex: 1 1 0%;
     max-width: 380px;
-    background-color: #f4f6f8;
+    background-color: #f0f2f4;
     overflow-y: auto;
     overflow-x: hidden;
 }
